--- a/adensSticky/adensSticky/Express/SingleImage/Reports/11-4-2017 09-44-06 上午.htm
+++ b/adensSticky/adensSticky/Express/SingleImage/Reports/11-4-2017 09-44-06 上午.htm
@@ -73,7 +73,7 @@ Number of files:
 
 <TD WIDTH="55%"VALIGN="center"><FONT FACE="Times New Roman"SIZE=2><P>
 
-8
+10
 </FONT></P></TD>
 
 </TR>
@@ -181,12 +181,250 @@ Version
 
 <TD WIDTH="30%"VALIGN="center"><FONT FACE="Times New Roman"SIZE=2><P>
 
-Newtonsoft.Json.xml
+StickyNotes.vshost.exe
 </FONT></P></TD>
 
 <TD WIDTH="20%"VALIGN="center"><FONT FACE="Times New Roman"SIZE=2><P>
 
-[ProgramFilesFolder]aden\Sticky Notes
+[ProgramFilesFolder]adens\Sticky Note\Release
+</FONT></P></TD>
+
+<TD WIDTH="15%"VALIGN="center"><FONT FACE="Times New Roman"SIZE=2><P>
+
+始终安装
+</FONT></P></TD>
+
+<TD WIDTH="15%"VALIGN="center"><FONT FACE="Times New Roman"SIZE=2><P>
+
+2017/11/4 9:13:48
+</FONT></P></TD>
+
+<TD WIDTH="10%"VALIGN="center"><FONT FACE="Times New Roman"SIZE=2><P>
+
+23168
+</FONT></P></TD>
+
+<TD WIDTH="10%"VALIGN="center"><FONT FACE="Times New Roman"SIZE=2><P>
+
+12.0.30723.0
+</FONT></P></TD>
+
+</TR>
+
+<TR>
+
+<TD WIDTH="30%"VALIGN="center"><FONT FACE="Times New Roman"SIZE=2><P>
+
+StickyNotes.exe
+</FONT></P></TD>
+
+<TD WIDTH="20%"VALIGN="center"><FONT FACE="Times New Roman"SIZE=2><P>
+
+[ProgramFilesFolder]adens\Sticky Note\Release
+</FONT></P></TD>
+
+<TD WIDTH="15%"VALIGN="center"><FONT FACE="Times New Roman"SIZE=2><P>
+
+始终安装
+</FONT></P></TD>
+
+<TD WIDTH="15%"VALIGN="center"><FONT FACE="Times New Roman"SIZE=2><P>
+
+
+</FONT></P></TD>
+
+<TD WIDTH="10%"VALIGN="center"><FONT FACE="Times New Roman"SIZE=2><P>
+
+0
+</FONT></P></TD>
+
+<TD WIDTH="10%"VALIGN="center"><FONT FACE="Times New Roman"SIZE=2><P>
+
+
+</FONT></P></TD>
+
+</TR>
+
+<TR>
+
+<TD WIDTH="30%"VALIGN="center"><FONT FACE="Times New Roman"SIZE=2><P>
+
+Newtonsoft.Json.dll
+</FONT></P></TD>
+
+<TD WIDTH="20%"VALIGN="center"><FONT FACE="Times New Roman"SIZE=2><P>
+
+[ProgramFilesFolder]adens\Sticky Note\Release
+</FONT></P></TD>
+
+<TD WIDTH="15%"VALIGN="center"><FONT FACE="Times New Roman"SIZE=2><P>
+
+始终安装
+</FONT></P></TD>
+
+<TD WIDTH="15%"VALIGN="center"><FONT FACE="Times New Roman"SIZE=2><P>
+
+
+</FONT></P></TD>
+
+<TD WIDTH="10%"VALIGN="center"><FONT FACE="Times New Roman"SIZE=2><P>
+
+0
+</FONT></P></TD>
+
+<TD WIDTH="10%"VALIGN="center"><FONT FACE="Times New Roman"SIZE=2><P>
+
+
+</FONT></P></TD>
+
+</TR>
+
+<TR>
+
+<TD WIDTH="30%"VALIGN="center"><FONT FACE="Times New Roman"SIZE=2><P>
+
+mainpos.json
+</FONT></P></TD>
+
+<TD WIDTH="20%"VALIGN="center"><FONT FACE="Times New Roman"SIZE=2><P>
+
+[ProgramFilesFolder]adens\Sticky Note\Release\Data
+</FONT></P></TD>
+
+<TD WIDTH="15%"VALIGN="center"><FONT FACE="Times New Roman"SIZE=2><P>
+
+始终安装
+</FONT></P></TD>
+
+<TD WIDTH="15%"VALIGN="center"><FONT FACE="Times New Roman"SIZE=2><P>
+
+2017/11/3 20:17:20
+</FONT></P></TD>
+
+<TD WIDTH="10%"VALIGN="center"><FONT FACE="Times New Roman"SIZE=2><P>
+
+10
+</FONT></P></TD>
+
+<TD WIDTH="10%"VALIGN="center"><FONT FACE="Times New Roman"SIZE=2><P>
+
+
+</FONT></P></TD>
+
+</TR>
+
+<TR>
+
+<TD WIDTH="30%"VALIGN="center"><FONT FACE="Times New Roman"SIZE=2><P>
+
+data.json
+</FONT></P></TD>
+
+<TD WIDTH="20%"VALIGN="center"><FONT FACE="Times New Roman"SIZE=2><P>
+
+[ProgramFilesFolder]adens\Sticky Note\Release\Data
+</FONT></P></TD>
+
+<TD WIDTH="15%"VALIGN="center"><FONT FACE="Times New Roman"SIZE=2><P>
+
+始终安装
+</FONT></P></TD>
+
+<TD WIDTH="15%"VALIGN="center"><FONT FACE="Times New Roman"SIZE=2><P>
+
+2017/11/4 8:21:16
+</FONT></P></TD>
+
+<TD WIDTH="10%"VALIGN="center"><FONT FACE="Times New Roman"SIZE=2><P>
+
+551
+</FONT></P></TD>
+
+<TD WIDTH="10%"VALIGN="center"><FONT FACE="Times New Roman"SIZE=2><P>
+
+
+</FONT></P></TD>
+
+</TR>
+
+<TR>
+
+<TD WIDTH="30%"VALIGN="center"><FONT FACE="Times New Roman"SIZE=2><P>
+
+StickyNotes.vshost.exe.manifest
+</FONT></P></TD>
+
+<TD WIDTH="20%"VALIGN="center"><FONT FACE="Times New Roman"SIZE=2><P>
+
+[ProgramFilesFolder]adens\Sticky Note\Release
+</FONT></P></TD>
+
+<TD WIDTH="15%"VALIGN="center"><FONT FACE="Times New Roman"SIZE=2><P>
+
+始终安装
+</FONT></P></TD>
+
+<TD WIDTH="15%"VALIGN="center"><FONT FACE="Times New Roman"SIZE=2><P>
+
+2016/3/9 13:48:32
+</FONT></P></TD>
+
+<TD WIDTH="10%"VALIGN="center"><FONT FACE="Times New Roman"SIZE=2><P>
+
+490
+</FONT></P></TD>
+
+<TD WIDTH="10%"VALIGN="center"><FONT FACE="Times New Roman"SIZE=2><P>
+
+
+</FONT></P></TD>
+
+</TR>
+
+<TR>
+
+<TD WIDTH="30%"VALIGN="center"><FONT FACE="Times New Roman"SIZE=2><P>
+
+StickyNotes.vshost.exe.config
+</FONT></P></TD>
+
+<TD WIDTH="20%"VALIGN="center"><FONT FACE="Times New Roman"SIZE=2><P>
+
+[ProgramFilesFolder]adens\Sticky Note\Release
+</FONT></P></TD>
+
+<TD WIDTH="15%"VALIGN="center"><FONT FACE="Times New Roman"SIZE=2><P>
+
+始终安装
+</FONT></P></TD>
+
+<TD WIDTH="15%"VALIGN="center"><FONT FACE="Times New Roman"SIZE=2><P>
+
+2017/2/24 16:02:55
+</FONT></P></TD>
+
+<TD WIDTH="10%"VALIGN="center"><FONT FACE="Times New Roman"SIZE=2><P>
+
+187
+</FONT></P></TD>
+
+<TD WIDTH="10%"VALIGN="center"><FONT FACE="Times New Roman"SIZE=2><P>
+
+
+</FONT></P></TD>
+
+</TR>
+
+<TR>
+
+<TD WIDTH="30%"VALIGN="center"><FONT FACE="Times New Roman"SIZE=2><P>
+
+StickyNotes.pdb
+</FONT></P></TD>
+
+<TD WIDTH="20%"VALIGN="center"><FONT FACE="Times New Roman"SIZE=2><P>
+
+[ProgramFilesFolder]adens\Sticky Note\Release
 </FONT></P></TD>
 
 <TD WIDTH="15%"VALIGN="center"><FONT FACE="Times New Roman"SIZE=2><P>
@@ -220,7 +458,7 @@ StickyNotes.exe.config
 
 <TD WIDTH="20%"VALIGN="center"><FONT FACE="Times New Roman"SIZE=2><P>
 
-[ProgramFilesFolder]aden\Sticky Notes
+[ProgramFilesFolder]adens\Sticky Note\Release
 </FONT></P></TD>
 
 <TD WIDTH="15%"VALIGN="center"><FONT FACE="Times New Roman"SIZE=2><P>
@@ -249,12 +487,12 @@ StickyNotes.exe.config
 
 <TD WIDTH="30%"VALIGN="center"><FONT FACE="Times New Roman"SIZE=2><P>
 
-StickyNotes.pdb
+Newtonsoft.Json.xml
 </FONT></P></TD>
 
 <TD WIDTH="20%"VALIGN="center"><FONT FACE="Times New Roman"SIZE=2><P>
 
-[ProgramFilesFolder]aden\Sticky Notes
+[ProgramFilesFolder]adens\Sticky Note\Release
 </FONT></P></TD>
 
 <TD WIDTH="15%"VALIGN="center"><FONT FACE="Times New Roman"SIZE=2><P>
@@ -275,176 +513,6 @@ StickyNotes.pdb
 <TD WIDTH="10%"VALIGN="center"><FONT FACE="Times New Roman"SIZE=2><P>
 
 
-</FONT></P></TD>
-
-</TR>
-
-<TR>
-
-<TD WIDTH="30%"VALIGN="center"><FONT FACE="Times New Roman"SIZE=2><P>
-
-StickyNotes.vshost.exe.config
-</FONT></P></TD>
-
-<TD WIDTH="20%"VALIGN="center"><FONT FACE="Times New Roman"SIZE=2><P>
-
-[ProgramFilesFolder]aden\Sticky Notes
-</FONT></P></TD>
-
-<TD WIDTH="15%"VALIGN="center"><FONT FACE="Times New Roman"SIZE=2><P>
-
-始终安装
-</FONT></P></TD>
-
-<TD WIDTH="15%"VALIGN="center"><FONT FACE="Times New Roman"SIZE=2><P>
-
-2017/2/24 16:02:55
-</FONT></P></TD>
-
-<TD WIDTH="10%"VALIGN="center"><FONT FACE="Times New Roman"SIZE=2><P>
-
-187
-</FONT></P></TD>
-
-<TD WIDTH="10%"VALIGN="center"><FONT FACE="Times New Roman"SIZE=2><P>
-
-
-</FONT></P></TD>
-
-</TR>
-
-<TR>
-
-<TD WIDTH="30%"VALIGN="center"><FONT FACE="Times New Roman"SIZE=2><P>
-
-StickyNotes.vshost.exe.manifest
-</FONT></P></TD>
-
-<TD WIDTH="20%"VALIGN="center"><FONT FACE="Times New Roman"SIZE=2><P>
-
-[ProgramFilesFolder]aden\Sticky Notes
-</FONT></P></TD>
-
-<TD WIDTH="15%"VALIGN="center"><FONT FACE="Times New Roman"SIZE=2><P>
-
-始终安装
-</FONT></P></TD>
-
-<TD WIDTH="15%"VALIGN="center"><FONT FACE="Times New Roman"SIZE=2><P>
-
-2015/6/4 12:48:30
-</FONT></P></TD>
-
-<TD WIDTH="10%"VALIGN="center"><FONT FACE="Times New Roman"SIZE=2><P>
-
-490
-</FONT></P></TD>
-
-<TD WIDTH="10%"VALIGN="center"><FONT FACE="Times New Roman"SIZE=2><P>
-
-
-</FONT></P></TD>
-
-</TR>
-
-<TR>
-
-<TD WIDTH="30%"VALIGN="center"><FONT FACE="Times New Roman"SIZE=2><P>
-
-Newtonsoft.Json.dll
-</FONT></P></TD>
-
-<TD WIDTH="20%"VALIGN="center"><FONT FACE="Times New Roman"SIZE=2><P>
-
-[ProgramFilesFolder]aden\Sticky Notes
-</FONT></P></TD>
-
-<TD WIDTH="15%"VALIGN="center"><FONT FACE="Times New Roman"SIZE=2><P>
-
-始终安装
-</FONT></P></TD>
-
-<TD WIDTH="15%"VALIGN="center"><FONT FACE="Times New Roman"SIZE=2><P>
-
-
-</FONT></P></TD>
-
-<TD WIDTH="10%"VALIGN="center"><FONT FACE="Times New Roman"SIZE=2><P>
-
-0
-</FONT></P></TD>
-
-<TD WIDTH="10%"VALIGN="center"><FONT FACE="Times New Roman"SIZE=2><P>
-
-
-</FONT></P></TD>
-
-</TR>
-
-<TR>
-
-<TD WIDTH="30%"VALIGN="center"><FONT FACE="Times New Roman"SIZE=2><P>
-
-StickyNotes.exe
-</FONT></P></TD>
-
-<TD WIDTH="20%"VALIGN="center"><FONT FACE="Times New Roman"SIZE=2><P>
-
-[ProgramFilesFolder]aden\Sticky Notes
-</FONT></P></TD>
-
-<TD WIDTH="15%"VALIGN="center"><FONT FACE="Times New Roman"SIZE=2><P>
-
-始终安装
-</FONT></P></TD>
-
-<TD WIDTH="15%"VALIGN="center"><FONT FACE="Times New Roman"SIZE=2><P>
-
-
-</FONT></P></TD>
-
-<TD WIDTH="10%"VALIGN="center"><FONT FACE="Times New Roman"SIZE=2><P>
-
-0
-</FONT></P></TD>
-
-<TD WIDTH="10%"VALIGN="center"><FONT FACE="Times New Roman"SIZE=2><P>
-
-
-</FONT></P></TD>
-
-</TR>
-
-<TR>
-
-<TD WIDTH="30%"VALIGN="center"><FONT FACE="Times New Roman"SIZE=2><P>
-
-StickyNotes.vshost.exe
-</FONT></P></TD>
-
-<TD WIDTH="20%"VALIGN="center"><FONT FACE="Times New Roman"SIZE=2><P>
-
-[ProgramFilesFolder]aden\Sticky Notes
-</FONT></P></TD>
-
-<TD WIDTH="15%"VALIGN="center"><FONT FACE="Times New Roman"SIZE=2><P>
-
-始终安装
-</FONT></P></TD>
-
-<TD WIDTH="15%"VALIGN="center"><FONT FACE="Times New Roman"SIZE=2><P>
-
-2017/3/6 16:39:48
-</FONT></P></TD>
-
-<TD WIDTH="10%"VALIGN="center"><FONT FACE="Times New Roman"SIZE=2><P>
-
-23168
-</FONT></P></TD>
-
-<TD WIDTH="10%"VALIGN="center"><FONT FACE="Times New Roman"SIZE=2><P>
-
-12.0.30723.0
 </FONT></P></TD>
 
 </TR>
